erDiagram
  %% ProductFabricComposition [new]
  ProductFabricComposition {
    Long id
    Long product_id
    enum layer
    enum material
    number percentage
    int sort_order
    timestamp created_at
    timestamp updated_at
  }
  ProductFabricComposition ||--|| Product : "rel"
  %% CareInstructionDef [new]
  CareInstructionDef {
    Long id
    str code
    str symbol_unicode
    str label_en
    str label_zh
    enum category
    int sort_order
    enum status
    timestamp created_at
    timestamp updated_at
  }
  %% ProductCareInstruction [new]
  ProductCareInstruction {
    Long product_id
    Long care_id
    int sort_order
  }
  ProductCareInstruction ||--|| Product : "rel"
  ProductCareInstruction ||--|| CareInstructionDef : "rel"
  classDef deprecated stroke:#999,stroke-dasharray:4 4,color:#999
  classDef new stroke:#0a0,stroke-width:2px
  classDef modified stroke:#fa0,stroke-width:2px
